subdir('eval1')
executable('hello', 'hello.cpp')
executable('liste', 'liste.cpp')
executable('chaine', 'chaine.cpp')
executable('tri_personne', 'tri_personne.cpp')
executable('selection_simple', 'selection_simple.cpp')
executable('tri_bulle', 'tri_bulle.cpp')
executable('tri_insertion', 'tri_insertion.cpp')
executable('tri_rapide', 'tri_rapide.cpp')
